--- a/07_HTML/Praktikum/CreateAccount.html
+++ b/07_HTML/Praktikum/CreateAccount.html
@@ -9,39 +9,41 @@
   <body>
     <h1>Create Account</h1>
     <h2>Detail Form</h2>
-    <p>First Name :</p>
-    <input type="text" />
-    <p>Last Name :</p>
-    <input type="text" />
-    <p>Username :</p>
-    <input type="text" />
-    <p>Email :</p>
-    <input type="text" />
-    <p>Gender :</p>
-    <input type="radio" />
-    <label for="male">Male</label><br />
-    <input type="radio" />
-    <label for="Female">Female</label><br />
-    <input type="radio" />
-    <label for="Other">Other</label><br />
-    <p>Adress</p>
-    <input type="text" for="adress" />
-    <p>Adress2</p>
-    <input type="text" for="adress2" />
-    <p>Nasionality :</p>
-    <p style="font-size: small">Nasionality</p>
-    <select id="nasionality">
-      <option value="1">Indonesia</option>
-      <option value="2">Malaysia</option>
-      <option value="3">Laos</option>
-    </select>
-    <p>Language Spoken :</p>
-    <input type="checkbox" />
-    <label for="bahasa_indonesia">Bahasa Indoensia</label><br />
-    <input type="checkbox" />
-    <label for="english">English</label><br />
-    <input type="checkbox" />
-    <label for="other">Other</label><br /><br />
-    <input type="submit" value="Create New Account" />
+    <form>
+      <p>First Name :</p>
+      <input type="text" for="firstname" required />
+      <p>Last Name :</p>
+      <input type="text" type="text" for="lastname" required />
+      <p>Username :</p>
+      <input type="text" type="text" for="username" required />
+      <p>Email :</p>
+      <input type="text" type="text" for="email" required />
+      <p>Gender :</p>
+      <input type="radio" name="gender" id="gender" value="male" required />
+      <label for="male">Male</label><br />
+      <input type="radio" name="gender" id="gender" value="female" required />
+      <label for="Female">Female</label><br />
+      <input type="radio" name="gender" id="gender" value="other" required />
+      <label for="Other">Other</label><br />
+      <p>Adress</p>
+      <input type="text" for="adress" required />
+      <p>Adress2</p>
+      <input type="text" for="adress2" required />
+      <p>Nasionality :</p>
+      <p style="font-size: small">Nasionality</p>
+      <select id="nasionality">
+        <option value="1" required>Indonesia</option>
+        <option value="2">Malaysia</option>
+        <option value="3">Laos</option>
+      </select>
+      <p>Language Spoken :</p>
+      <input type="checkbox" />
+      <label for="bahasa_indonesia">Bahasa Indoensia</label><br />
+      <input type="checkbox" value="bahasa_indonesia" required />
+      <label for="english">English</label><br />
+      <input type="checkbox" />
+      <label for="other">Other</label><br /><br />
+      <input type="submit" value="Create New Account" />
+    </form>
   </body>
 </html>
