--- a/08_CSS/Praktikum/landingPage.html
+++ b/08_CSS/Praktikum/landingPage.html
@@ -41,7 +41,7 @@
       <div class="container-main">
         <div class="container-kiri">
           <h1 class="text-hero">
-            Better Solutions For Your<br />
+            Better Solutions For Your
             Business
           </h1>
           <p class="text-keterangan">We are team of talented designers making websites with Boostrap</p>
@@ -64,10 +64,60 @@
             </form>
         </div>
     </div>
-      <hr />
-      &copy Copyright <b>Arsha</b>. All Rights Reserved <br />
-      <br />
-      Designed by BootstrapMade
-
+<footer>
+  <div class="footer-deskripsi">
+    <div class="deskripsi-alamat">
+        <h1>ARSHA</h1>
+        <p>A108 Adam Street <br />
+            New York, NY 535022 <br />
+            United States <br /> <br />
+           
+           <span>Phone:</span> +1 5589 55488 55 <br />
+           <span>Email:</span> info@example.com
+           </p>
+    </div>
+    <div class="useful">
+        <h2>Useful Links</h2>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Terms of Service</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+        </ul>
+    </div>
+    <div class="services">
+        <h2>Our Services</h2>
+        <ul>
+            <li><a href="#">Web Design</a></li>
+            <li><a href="#">Web Development</a></li>
+            <li><a href="#">Product Management</a></li>
+            <li><a href="#">Marketing</a></li>
+            <li><a href="#">Graphic Design</a></li>
+        </ul>
+    </div>
+    <div class="social">
+        <h2>Our Social Networks</h2>
+        <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
+        <div class="social-account">
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+        </div>
+    </div>
+</div>
+<div class="copyright">
+    <div class=" copyright-deskripsi">
+        <div class="copyright-kiri">
+             Copyright <span>Arsha.</span> All Rights Reserved
+        </div>
+        <div class="copyright-kanan">
+            Designed by <a href="#">BootstrapMade</a>
+        </div>
+    </div>
+</div>
+</footer>
   </body>
 </html>
