--- a/08_CSS/Praktikum/landingPage.html
+++ b/08_CSS/Praktikum/landingPage.html
@@ -46,7 +46,7 @@
           </h1>
           <p class="text-keterangan">We are team of talented designers making websites with Boostrap</p>
           <div class="tombol">
-            <a href="#" id="tombol-kiri" style="">Get Started</a>
+            <a href="#" id="tombol-kiri" >Get Started</a>
             <a href="#" id="tombol-kanan">Watch Video</a>
           </div>
         </div>
