--- a/07_HTML/Praktikum/createProduct.HTML
+++ b/07_HTML/Praktikum/createProduct.HTML
@@ -36,7 +36,7 @@
       <p>Adtional Description</p>
       <textarea name="description" id="descriotion" cols="35" rows="9" required></textarea>
       <p>Product Price :</p>
-      <input type="number" placeholder="$100" />
+      <input type="number" name="price" id="price" required placeholder="$100" />
       <br />
       <br />
       <input type="submit" />
