--- a/09_Bootstrap/Praktikum/CreateProduct.html
+++ b/09_Bootstrap/Praktikum/CreateProduct.html
@@ -43,7 +43,7 @@
             >Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</span
           >
         </div>
-        <form action="" class="container-fluid mt-5 was-validated">
+        <form action="" class="container-fluid mt-5 was-validated" id="myForm">
           <h3 class="mb-4">Detail Product</h3>
           <div class="mb-3 col-md-6 col-sm-8 has-validation">
             <label for="product_name" class="form-label">Product Name</label>
@@ -94,9 +94,19 @@
           </div>
           <button type="submit" class="btn btn-primary w-100 mb-5">Submit</button>
         </form>
+        <div class="alert alert-success" role="alert" id="myAlert" style="display: none"></div>
+        <script>
+          document.getElementById('myForm').addEventListener('submit', function (event) {
+            event.preventDefault(); // Mencegah form untuk langsung mengirimkan data
+
+            var alertMessage = 'Anda Telah Menambah Product';
+            document.getElementById('myAlert').innerHTML = alertMessage;
+            document.getElementById('myAlert').style.display = 'block';
+          });
+        </script>
       </section>
     </div>
-    <div class="list-product">
+    <div class="list-product ms-3">
       <h1 class="text-center">List Product</h1>
       <table class="table table-striped table-md w-75 table-bordered border">
         <thead>
