--- a/09_Bootstrap/Praktikum/CreateProduct.html
+++ b/09_Bootstrap/Praktikum/CreateProduct.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Boostrap</title>
@@ -34,8 +38,9 @@
         </div>
       </div>
     </nav>
+
     <div class="container">
-      <section class="d-grid justify-content-center z-3">
+      <section class="justify-content-center d-grid z-3">
         <div class="deskripsi text-center">
           <img src="bootstrap-logo.svg.png" alt="bootstrap" />
           <p class="fs-2 fw-semibold pt-5">Create Product</p>
@@ -44,11 +49,11 @@
           >
         </div>
         <form action="" class="container-fluid mt-5 was-validated" id="myForm">
-          <h3 class="mb-4">Detail Product</h3>
+          <h3 class="mb-3">Detail Product</h3>
           <div class="mb-3 col-md-6 col-sm-8 has-validation">
             <label for="product_name" class="form-label">Product Name</label>
             <input type="text" name="product-name" class="form-control" id="product_name" required />
-            <div class="invalid-feedback">Anda harus mengisi nama produk!</div>
+            <div class="invalid-feedback">Wajib di Isi</div>
           </div>
           <div class="mb-3 col-md-4 col-sm-6 has-validation">
             <label for="product-category" class="form-label">Product Category</label>
@@ -58,47 +63,47 @@
               <option value="category 2">Category 2</option>
               <option value="category 3">Category 3</option>
             </select>
-            <div class="invalid-feedback">Terimakasih telah mengisi kategori produk</div>
+            <div class="invalid-feedback">Wajib di Isi</div>
           </div>
           <div class="mb-3 col-md-4 col-sm-6 has-validation">
-            <label for="product-category" class="form-label">Product Category</label>
+            <label for="product-category" class="form-label">Image</label>
             <input type="file" name="image" required class="form-control" />
-            <div class="invalid-feedback">Tolong pilih gambar produk</div>
+            <div class="invalid-feedback">Wajib di Isi</div>
           </div>
           <div class="mb-3 col-md-4 col-sm-6 form-check">
             <label class="pb-1 form-label">Product Freshness</label>
             <div class="form-check">
-              <input type="radio" class="form-check-input" id="validationProductBrandNew" name="radio-stacked" required />
-              <label for="validationProductBrandNew" class="form-check-label">Brand New</label>
-              <div class="invalid-feedback">Pilih Salah Satu Product Freshness!</div>
+              <input type="radio" class="form-check-input" id="brandNew" name="radio-stacked" required />
+              <label for="brandNew" class="form-check-label">Brand New</label>
+              <div class="invalid-feedback">Wajib di Isi</div>
             </div>
             <div class="form-check">
-              <input type="radio" class="form-check-input" id="validationSecondHand" name="radio-stacked" required />
-              <label for="validationSecondHand" class="form-check-label">Second Hand</label>
-              <div class="invalid-feedback">Pilih Salah Satu Product Freshness!</div>
+              <input type="radio" class="form-check-input" id="secondHand" name="radio-stacked" required />
+              <label for="secondHand" class="form-check-label">Second Hand</label>
+              <div class="invalid-feedback">Wajib di Isi</div>
             </div>
             <div class="form-check">
-              <input type="radio" class="form-check-input" id="validationRefurbrished" name="radio-stacked" required />
-              <label for="validationRefurbrished" class="form-check-label">Refurbrished </label>
-              <div class="invalid-feedback">Pilih Salah Satu Product Freshness!</div>
+              <input type="radio" class="form-check-input" id="refurbished" name="radio-stacked" required />
+              <label for="refurbished" class="form-check-label">Refurbrished </label>
+              <div class="invalid-feedback">Wajib di Isi</div>
             </div>
           </div>
           <div class="mb-3">
             <label class="form-label">Additional Description</label>
             <textarea class="form-control" rows="10" required></textarea>
-            <div class="invalid-feedback">Deskripsi produk wajib diisi!</div>
+            <div class="invalid-feedback">Wajib di Isi</div>
           </div>
           <div class="mb-5 has-validation">
-            <label for="validationProductPrice" class="form-label">Product Price</label>
-            <input type="number" name="price" class="form-control" id="validationProductPrice" placeholder="$1" required />
+            <label for="productPrice" class="form-label">Product Price</label>
+            <input type="number" name="price" class="form-control" id="productPrice" placeholder="$1" required />
+            <div class="invalid-feedback">Wajib di Isi</div>
           </div>
-          <button type="submit" class="btn btn-primary w-100 mb-5">Submit</button>
+          <button type="submit" class="btn btn-primary w-100 mb-5 data-toggle="tooltip" data-placement="top" title="Ini adalah Submit">Submit</button>
         </form>
         <div class="alert alert-success" role="alert" id="myAlert" style="display: none"></div>
         <script>
           document.getElementById('myForm').addEventListener('submit', function (event) {
-            event.preventDefault(); // Mencegah form untuk langsung mengirimkan data
-
+            event.preventDefault();
             var alertMessage = 'Anda Telah Menambah Product';
             document.getElementById('myAlert').innerHTML = alertMessage;
             document.getElementById('myAlert').style.display = 'block';
