--- a/09_Bootstrap/Praktikum/CreateProduct.html
+++ b/09_Bootstrap/Praktikum/CreateProduct.html
@@ -98,7 +98,7 @@
             <input type="number" name="price" class="form-control" id="productPrice" placeholder="$1" required />
             <div class="invalid-feedback">Wajib di Isi</div>
           </div>
-          <button type="submit" class="btn btn-primary w-100 mb-5 data-toggle="tooltip" data-placement="top" title="Ini adalah Submit">Submit</button>
+          <button type="submit" class="btn btn-primary w-100 mb-5 data-toggle=" tooltip data-placement="top" title="Ini adalah Submit">Submit</button>
         </form>
         <div class="alert alert-success" role="alert" id="myAlert" style="display: none"></div>
         <script>
