--- a/10_Javascript Refreshment/Praktikum/CreateProduct.html
+++ b/10_Javascript Refreshment/Praktikum/CreateProduct.html
@@ -44,29 +44,29 @@
             >Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</span
           >
         </div>
-        <form action="" class="container-fluid mt-5" id="myForm">
+        <form action="" class="container-fluid mt-5 was-validated" id="myForm">
           <h3 class="mb-3">Detail Product</h3>
           <div class="mb-3 col-md-6 col-sm-8">
-            <label for="product_name" class="form-label">Product Name</label>
-            <input type="text" name="product-name" class="form-control" id="product_name" />
+            <label for="product_name" class="form-label has-validation">Product Name</label>
+            <input type="text" name="product_name" class="form-control" id="product_name" required />
           </div>
-          <div class="mb-3 col-md-4 col-sm-6">
-            <label for="product-category" class="form-label">Product Category</label>
-            <select name="product-category" class="form-select">
+          <div class="mb-3 col-md-4 col-sm-6 has-validation">
+            <label for="product_category" class="form-label">Product Category</label>
+            <select name="product_category" class="form-select" id="product_category" required>
               <option selected disabled value="">Pilih kategori produk</option>
               <option value="1">Category 1</option>
               <option value="2">Category 2</option>
               <option value="3">Category 3</option>
             </select>
           </div>
-          <div class="mb-3 col-md-4 col-sm-6">
-            <label for="product-category" class="form-label">Image</label>
-            <input type="file" name="image" class="form-control" />
+          <div class="mb-3 col-md-4 col-sm-6 has-validation">
+            <label for="image" class="form-label">Image</label>
+            <input type="file" name="image" class="form-control" id="image" required />
           </div>
-          <div class="mb-3 col-md-4 col-sm-6 form-check">
+          <div class="mb-3 col-md-4 col-sm-6 form-check has-validation" id="product_freshness">
             <label class="pb-1 form-label">Product Freshness</label>
             <div class="form-check">
-              <input type="radio" class="form-check-input" id="brandNew" name="radio-stacked" />
+              <input type="radio" class="form-check-input" id="brandNew" name="radio-stacked" required />
               <label for="brandNew" class="form-check-label">Brand New</label>
             </div>
             <div class="form-check">
@@ -80,28 +80,45 @@
           </div>
           <div class="mb-3">
             <label class="form-label">Additional Description</label>
-            <textarea class="form-control" rows="10"></textarea>
+            <textarea class="form-control" id="description" rows="10" required></textarea>
           </div>
-          <div class="mb-5">
+          <div class="mb-5 has-validation">
             <label for="productPrice" class="form-label">Product Price</label>
-            <input type="number" name="price" class="form-control" id="productPrice" placeholder="$1" />
+            <input type="number" name="price" class="form-control" id="product_price" placeholder="$1" required />
           </div>
-          <button type="submit" class="btn btn-primary w-100 mb-5" onclick="validasi()">Submit</button>
+          <button type="submit" id="submit_button" class="btn btn-primary w-100 mb-5" onclick="validasi()">Submit</button>
         </form>
 
         <script>
           function validasi() {
-            let input = document.getElementById('product_name').value;
-            let simbol = /^[a-zA-Z0-9 ]*$/;
+            var input = document.getElementById('product_name').value;
+            var input1 = document.getElementById('product_category').value;
+            var input2 = document.getElementById('image').value;
+            var input3 = document.getElementById('product_freshness').value;
+            var input4 = document.getElementById('description').value;
+            var input5 = document.getElementById('product_price').value;
+            var submit_button = document.getElementById('submit_button');
+            var valid = true;
+
+            var simbol = /^[a-zA-Z0-9 ]*$/;
             if (input.length > 25) {
               alert('Input tidak boleh melebihi 25 karakter!');
             } else if (input.length > 10) {
               alert('Last Name must not exceed 25 characters.');
+              if (!simbol.test(input)) {
+                alert('Name must not contain symbols.');
+              }
             } else if (input == '') {
-              alert('Input tidak boleh kosong!' + input);
+              alert('Please enter a valid Prouct name.');
+              if (input1 == '' || input2 == '' || input3 == '' || input4 == '' || input5 == '') {
+                alert('Input tidak boleh kosong! ' + input);
+                valid = false;
+              }
             }
-            if (!simbol.test(input)) {
-              alert('Name must not contain symbols.');
+            if (!valid) {
+              submit_button.disabled = true;
+            } else {
+              submit_button.disabled = false;
             }
           }
         </script>
